# playground

./: readme.md
baidu_speech_reco/: main.py  read_audio.py
onnxruntime/: CMakeLists.txt  classification.cpp
onnxruntime/classification/: .clang-format  CMakeLists.txt  classification.cpp  classification.py
onnxruntime/object_detection/: .gitignore  CMakeLists.txt  object_detection.cpp  object_detection.py  settings.json
speech_reco/baidu/: .gitignore
torch_script/: CMakeLists.txt  main.cpp  main.py  readme.md
torch_tensorrt/: .gitignore  main.py
